Toggle walls and doors on the bottom layer are no longer 'alive' in MS. New transparency format for tiles, things look better. Removed the option to not view background tiles, switch to the MSCC or TW non-editor versions if you want those.